mattermost-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mattermost
  name: mattermost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mattermost
    spec:
      containers:
      - image: k8spracticalguide/mattermost:4.10.2
        name: mattermost
        resources: {}
        volumeMounts:
          - name: cm-volume
            mountPath: /mm/config
      volumes:
      - name: cm-volume
        configMap:
          name: mm-config-file
          items:
          - key: config.json
            path: config.json
status: {}
